# image-processing-with-opencv

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/hello_world/: hello_world.cc
